Change history
==============

2.2 (2012-XX-XX)
----------------

- Browser view support for showing and hiding carousel viewlet added. [taito]

- Lazily load carousel images [miohtama]

- Don't display ``<img alt="">`` text on the carousel images as it leads to confusing
  with partially load carousel images [miohtama]

- Added checkbox to enable lazy loading carousel images. [kroman0]


2.1 (2011-09-06)
----------------

- Updated i18n helper script to reflect current translations.
  [yomatters]

- Added Finnish translation.
  [datakurre]

- Allow users with the Site Administrator role to add Carousel banners by default.
  [davisagli]

- Added collective.googleanalytics tracking plugin for tracking banner clicks.
  [yomatters]

- Added Dutch translations.
  [jladage]


2.1b3 (2011-01-19)
------------------

- Changed default banner to use the image URL first and then fall back to the
  uploaded image.
  [yomatters]

- Made Carousel respect folder order of banners.
  [yomatters]

- Fixed animation logic for sliding Carousel.
  [yomatters]

- Made link URL optional.
  [yomatters]

- Added the ability to enter an external image URL instead of
  uploading an image.
  [yomatters]

- Fixed permission bug that affected unpublished Carousel folders.
  [yomatters]

- Fixed Carousel banner lookup so that banner view permissions are respected.
  [yomatters]

- Fixed a bug that affected folders containing an item with the ID 'carousel'
  that was not a Carousel folder.
  [yomatters]

2.1b2 (2010-12-08)
------------------

- Fixed javascript error on Plone 3.
  [yomatters]

2.1b1 (2010-12-06)
------------------

- Fixed known good versions set link.
  [yomatters]

- Made instructions for adding and modifying banners more prominent.
  [yomatters]

- Added option for setting the ID of the Carousel.
  [yomatters]

2.0 (2010-11-19)
----------------

- Split plugin into functions, making it easier to override parts of the
  Carousel behavior.
  [yomatters]

2.0b1 (2010-09-30)